-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 6.0.2
-
None
-
-
08c25aef25 (qt-creator/qt-creator/7.0) 08c25aef25 (qt-creator/qt-creator/master) 08c25aef25 (qt-creator/tqtc-qt-creator/7.0) 08c25aef25 (qt-creator/tqtc-qt-creator/master) 08c25aef25 (qt-creator/tqtc-qt-creator/qds-3.1)
Since the upgrade to 6.0.2 (from 5.x) the light bulb for code completion hints is now super tiny, one can barely see it.
This is a regression from 5.x, it was the proper size there.
Ubuntu 21.10 with 250% scaling (which effectively uses 3x scaling factor for Qt and then scales down again to 2.5x on the display server level).
- is duplicated by
-
QTCREATORBUG-26623 Quick fix icon is tiny on high DPI screens
-
- Closed
-
For Gerrit Dashboard: QTCREATORBUG-26905 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
394749,2 | TextEditor: Fix High-DPI+Qt6 drawing of the refactor marker icon | 7.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |