TextEditor: Fix High-DPI+Qt6 drawing of the refactor marker icon

Subtle devicePixelRatio-related changes in Qt require to restrict one
division by a Qt 5 specific #ifdef.

Fixes: QTCREATORBUG-26905
Change-Id: Ic5eecef5c7cb355abc8a5391708c5cd1050af282
Reviewed-by: <github-actions-qt-creator@cristianadam.eu>
Reviewed-by: David Schulz <david.schulz@qt.io>